--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap-icons": "^1.8.0",
+    "formik": "^2.2.9",
     "dates-generator": "^1.0.4",
     "moment": "^2.29.1",
     "react": "^17.0.2",
